# permission-api

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md  rustfmt.toml
.cargo/: config.toml
crates/app/: Cargo.toml
crates/app/src/: lib.rs  tests.rs  web_state.rs
crates/app/src/controller/: api_type.rs  middleware.rs  mod.rs  router.rs
crates/app/src/controller/auth/: mod.rs  types.rs
crates/app/src/controller/menu/: mod.rs  types.rs
crates/app/src/controller/role/: mod.rs  types.rs
crates/app/src/controller/user/: mod.rs  types.rs
crates/app/src/entity/: database.rs  menu.rs  mod.rs  online.rs  role.rs  role_menu.rs  user.rs  user_role.rs
crates/app/src/service/: menu.rs  mod.rs  online.rs  role.rs  user.rs
crates/utils/: Cargo.toml
crates/utils/src/: bytes.rs  lib.rs  u64.rs
sql/: main.sql
src/: main.rs
