[workspace]
resolver = "2"

members = [ 
    "crates/utils",
    "crates/app",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
utils = { path = "crates/utils" }
app = { path = "crates/app" }

clap = { version = "4.5", features = ["derive", "env"] }
anyhow = "1.0"

tracing-subscriber = { version = "0.3", features = [ "env-filter", "std", "fmt" ] }
tracing-appender = "0.2.3"
tracing = "0.1"

tokio = { version = "1.0", features = ["full"]  }

axum = { version = "0.8", features = ["macros"] }
axum-valid = "0.24.0"
validator = { version = "0.20", features = ["derive"] }

utoipa = { version = "5.4", features = ["axum_extras", "debug"] }
utoipa-axum = { version = "0.2", features = ["debug"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }

sea-orm = { version = "1.1.14", features = ["sqlx-all", "runtime-tokio"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0"}
toml = "0.9.2"

lru = "0.16.0"
uuid = { version = "1.17", features = ["v4"] }
sha3 = "0.10"
hex = "0.4"
once_cell = "1.21.3"

[package]
name = "server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
tokio.workspace = true

anyhow.workspace = true
clap.workspace = true

tracing-subscriber.workspace = true
tracing-appender.workspace = true
tracing.workspace = true

app.workspace = true