[package]
name = "app"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true

anyhow.workspace = true

tracing.workspace = true

axum.workspace = true
axum-valid.workspace = true
validator.workspace = true

utoipa.workspace = true
utoipa-axum.workspace = true
utoipa-swagger-ui.workspace = true

sea-orm.workspace = true

serde.workspace = true
serde_json.workspace = true
toml.workspace = true

uuid.workspace = true

[dev-dependencies]
tokio-test = "0.4"
testcontainers = "0.15"
